--- a/PositionProjekt/app/views/users/new.html.erb
+++ b/PositionProjekt/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
       <h2>Följande fel har inträffat</h2>
       <ul>
         <% @user.errors.full_messages.each do |msg|%>
-            <li>msg</li>
+            <li> <%= msg %></li>
         <% end %>
       </ul>
     </div>
