--- a/KlientsideProjekt/app/app.css
+++ b/KlientsideProjekt/app/app.css
@@ -28,3 +28,85 @@
   content: "";
   padding: 0;
 }
+
+.boxOfEvents {
+    width: 100%;
+    height: 300px;
+    overflow: auto;
+    display: inline-block;
+    float: left;
+}
+
+.eventbox.ng-scope {
+    background-color: rgb(179, 209, 255);
+    padding: 10px;
+    display: block;
+    margin: 5px 5px 10px 10px;
+    cursor: pointer;
+
+}
+
+.eventbox.ng-scope h3.ng-binding {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    border-bottom: 2px rgb(159, 186, 227) solid;
+    padding-left: 5px;
+}
+
+.eventbox.ng-scope h4 {
+    margin-top: 10px;
+    font-weight: normal;
+}
+
+.loginbox.ng-scope {
+    float: right;
+    padding: 10px;
+}
+input[type="button"] {
+    margin: 10px;
+}
+
+div#eventSearch {
+    margin: 10px;
+    width: 250px;
+    display: inline-block;
+}
+
+div#eventDetails {
+    width: 100%;
+    display: inline-block;
+    padding: 10px;
+    background-color: rgb(179, 209, 255);
+    border-radius: 5px;
+}
+
+div#eventDetailsWrapper {
+    width: 50%;
+    display: block;
+    float: left;
+}
+
+div#boxOfEventsWrapper {
+    width: 50%;
+    height: 100%;
+    float: left;
+}
+
+.success.ng-scope {
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    background-color: rgb(22, 222, 22);
+    width: 100%;
+    border-radius: 0px 0px 20px 10px;
+
+}
+.error.ng-scope {
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    background-color: rgb(203, 0, 0);
+    width: 100%;
+    border-radius: 0px 0px 20px 10px;
+
+}
